2009-04-01  Jaroslav Hajek  <highegg@gmail.com>

	* ov-str-mat.cc (default_numeric_conversion_function):
	Create an octave_scalar if possible.

2009-03-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::button_press):
	Don't pass arbitrary input to fl_message as a format string.

2009-03-29  Jaroslav Hajek  <highegg@gmail.com>

	* pt-eval.cc (do_unwind_protect_cleanup_code): Protect also
	octave_interrupt_state.

2009-03-29  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc (Fcellslices): Index n-d arrays along the
	last dimension.

2009-03-27  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/balance.cc (Fbalance): Fix order of output args.

2009-03-26  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/find.cc 
	(find_nonzero_elem_idx (const Array<T>&, ...)): Move dimensions
	fixup to liboctave.

2009-03-26  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/find.cc 
	(find_nonzero_elem_idx (const Array<T>&, ...)): Simplify.
	Instantiate for bool and octave_int types.
	(find_nonzero_elem_idx (const Sparse<T>&, ...)): 
	Instantiate for bool.
	(Ffind): Handle bool and octave_int cases.

2009-03-25  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 3.1.55+.
	(OCTAVE_API_VERSION): Now api-v37+.

	* version.h (OCTAVE_VERSION): Now 3.1.55.
	(OCTAVE_API_VERSION): Now api-v37.
	(OCTAVE_RELEASE_DATE): Now 2009-03-25.

	* DLD-FUNCTIONS/find.cc (find_nonzero_elem_idx): Also return
	[](0x0) if the array has 0 rows and it is not a column vector.

	* oct-stream.cc (octave_stream::write (const Array<T>&,
	octave_idx_type, oct_data_conv::data_type, octave_idx_type,
	oct_mach_info::float_format)): Seek to skip if still inside bounds
	of existing file.  Otherwise, write NUL to skip.

	* Makefile.in (%.df : %.cc): Write source file name to output,
	wrapped in XDEFUN_FILE_NAME macro.
	* mkbuiltins: Provide definition for XDEFUN_FILE_NAME.
	* mkgendoc: Likeiwse.