@@ -1,3 +1,8 @@
+2008-04-03  David Bateman  <dbateman@free.fr>
+
+	* DLD-FUNCTIONS/max.cc (MINMAX_SPARSE_BODY): Allow sparse boolean 
+	values.
+
 2009-04-01  Jaroslav Hajek  <highegg@gmail.com>
 
 	* ov-str-mat.cc (default_numeric_conversion_function):
